# mediatecaMedusa-to-omekaS

./: .coverage  CAS_login.py  Migration_process.py  README.md  README_download_channels.md  README_json_reporter.md  check_requirements.py  clean.py  create_init_files.py  csv_reader.py  debug_generate_docs.py  download_channels.py  example_channels.csv  generate_docs.py  install_requirements.py  logger.py  main.py  migration_config.json  migration_manager.py  notas.txt  proceso_migracion.md  prueba.json  prueba_cauce.json  quick_start.py  requirements.txt  run_all.py  run_coverage.py  run_migration.py  run_test_migration.py  run_tests.py  setup.cfg  setup.py  setup_project.py  setup_venv.ps1  setup_venv.sh  task.json  test_count_xml_tags.py  test_migration.py  test_output.csv  update_editor_user_settings.py
Omeka/: OmekaAdapter.py
WordPress/: WordPressExporter.py
exports/: canales_tmp.csv  ceiplajares.xml  ceiplosblanquitos.xml  epa.xml  medias_xml_tag_counts.csv  medias_xml_tag_counts_fixed.csv  mediatecas.csv  pruebas.xml
scripts/: README_run_migration_tasks.md  count_xml_tags.py  default_site_conf.json  download_channels.py  limpieza_xml.ps1  limpieza_xml.sh  prueba.json  read_site_settings.php  run_migration_tasks.php  set_primary_thumbnail_media.php  setup_host.sh  site_conf.json  update_site_settings.php  update_users_cas_settings.php
src/: Migration_process.py  csv_reader.py  json_reporter.py  logger.py  migration_manager.py  test_migration.py
tests/: test_counts_fixed.csv  test_csv_reader.py  test_json_reporter.py  test_logger.py  test_omeka_adapter.py  (+3 more)
(+771 files in other folders)
