[metadata]
name = mediateca-to-omeka
version = 0.1.0
author = Área de Tecnología Educativa
description = Exportador de contenidos de Mediateca Medusa a Omeka S
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests
    beautifulsoup4
    lxml

[options.packages.find]
where = src
